--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                 <li>Meta Blueprint Certified</li>
             </ul>
         </div>
-        <a href="CV-ALEKE Agbéssi.pdf" download class="btn">Télécharger CV</a>
+        <a href="CV-ALEKE Agbéssi-janv.2026.pdf" download class="btn">Télécharger CV</a>
     </section>
 
     <section id="testimonials" class="testimonials">
@@ -183,3 +183,4 @@
     </footer>
 </body>
 </html>
+
